# lexical

./: CMakeLists.txt  main.cpp
src/: Lexer.cpp  Source.txt  Token.cpp  definitions.cpp  utils.cpp
